# math_optim-rs

./: Cargo.toml
algebra/src/: group.rs  lib.rs
bitree/: Cargo.toml
bitree/src/: lib.rs
chminmax/: Cargo.toml
chminmax/src/: lib.rs
conv/: Cargo.toml
conv/src/: lib.rs  ntt.rs
dsu/: 11-vpc.md
dsu/src/: lib.rs  potential_dsu.rs  valued_dsu.rs
geometry/src/: lib.rs
gf/: Cargo.toml
gf/src/: combinatorics.rs  lib.rs
graphalgo/: Cargo.toml
graphalgo/src/: lib.rs
graphalgo/src/ssp/: bfs.rs  dijkstra.rs
intalgo/: Cargo.toml
intalgo/src/: eratos.rs  gcd.rs  is_prime.rs  lib.rs  prime.rs
lca/: Cargo.toml
matrix/src/: lib.rs
parenthesis/src/: lib.rs
segtree/: Cargo.toml
segtree/src/: dual.rs  lazy.rs  lib.rs
seqalgo/: Cargo.toml
seqalgo/src/: lib.rs  rhash.rs  rle.rs
slopetrick/: Cargo.toml
slopetrick/src/: lib.rs
src/: lib.rs
treealgo/: Cargo.toml
treealgo/src/: euler_tour.rs  lca.rs  lib.rs
