[package]
name = "math_optim-rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "algebra",
    "bitree",
    "chminmax",
    "conv",
    "dsu", 
    "gf",
    "graphalgo",
    "intalgo",
    "segtree",
    "seqalgo",
    "slopetrick",
    "treealgo",
]

[dependencies]
algebra = { path = "algebra" }
bitree = { path = "bitree" }
chminmax = { path = "chminmax" }
conv = { path = "conv" }
dsu = { path = "dsu" }
gf = { path = "gf" }
graphalgo = { path = "graphalgo" }
intalgo = { path = "intalgo" }
segtree = { path = "segtree" }
seqalgo = { path = "seqalgo" }
slopetrick = { path = "slopetrick" }
treealgo = { path = "treealgo" }
