[package]
name = "math_optim-rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "algebra",
    "bitree",
    "chminmax",
    "conv",
    "dsu", 
    "geometry",
    "gf",
    "graphalgo",
    "intalgo",
    "parenthesis",
    "segtree",
    "seqalgo",
    "slopetrick",
    "treealgo",
]

[dependencies]
algebra = { path = "algebra" }
bitree = { path = "bitree" }
chminmax = { path = "chminmax" }
conv = { path = "conv" }
dsu = { path = "dsu" }
geometry = { path = "geometry" }
gf = { path = "gf" }
graphalgo = { path = "graphalgo" }
intalgo = { path = "intalgo" }
parenthesis = { path = "parenthesis" }
segtree = { path = "segtree" }
seqalgo = { path = "seqalgo" }
slopetrick = { path = "slopetrick" }
treealgo = { path = "treealgo" }
